js/js.translator/testData/incremental/invalidation/companionConstVal/lib2/simpleFunction.4.kt
fun simpleFunction(): String {
    return "4"
}
